--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cinnamon-session (4.4.0-1~ubuntuReleaseName0) ubuntuReleaseName; urgency=medium
+
+  * New upstream release
+
+ -- embrosyn <embrosyn@netc.eu>  Sat, 28 Dec 2019 02:35:02 +0100
+
 cinnamon-session (4.4.0) tricia; urgency=medium
 
   [ Michael Webster ]
